# auth_project

./: README.md  pyproject.toml
src/: main.py
src/connectors/: db.py
src/models/db/: user.py
src/models/errors/: exc.py
src/models/validation/: token.py  user.py
src/routers/: auth.py
src/utils/: auth.py
